# SharedFolder

./: .gitignore  README.md
test/: main.cpp  run.sh
train/: Makefile  base_line.txt  eval.cpp  gp.h  train  train.cpp  train.sh
trimaran/: README
trimaran/arm/: Makefile  TODO  benches.results  data_segment.cpp  data_segment.h  main.cpp  peephole_opti.cpp  peephole_opti.h  process_custom_ops.cpp  process_custom_ops.h  process_rebel.cpp  process_rebel.h  templates.cpp  util.cpp  util.h
trimaran/elcor/: Makefile
trimaran/elcor/include/: make_links
trimaran/elcor/license/: HPL_license  MIT_license  NYU_license  UM_license
trimaran/elcor/mdes/: Makefile  README  README_RELEASE  hpl_pd_elcor_std.hmdes2  mac_example.hmdes2
trimaran/elcor/metis-4.0/: Makefile.in
trimaran/elcor/parms/: ANALYSIS_DEFAULTS  ARCHITECTURE_DEFAULTS  CACHE_DEFAULTS  CLUSTER_DEFAULTS  CODEGEN_DEFAULTS  CONTROL_DEFAULTS  CPR_DEFAULTS  CUSTOM_OP_DEFAULTS  DATA_CPR_DEFAULTS  DEBUG_DEFAULTS  DRIVER_DEFAULTS  ELCOR_IMPACT_PARMS  ELCOR_PARMS  GLOBAL_DEFAULTS  IO_DEFAULTS  LOOP_REGALLOC_DEFAULTS  LOOP_SCHED_DEFAULTS  OPTI_DEFAULTS  SCALAR_REGALLOC_DEFAULTS  SCALAR_SCHED_DEFAULTS  STATS_DEFAULTS  VECTORIZER_DEFAULTS
trimaran/elcor/src/: .dependences  (+1 more)
trimaran/m5/: .cvsignore  Makefile
trimaran/openimpact/intrinsic.lib/: ETSI_convert.h  Makefile.am  intrinsic.c  intrinsic.h  intrinsic_db  typedef.h
trimaran/scripts/: bench_profile.sh  bench_test.pl  check_status  do_multi  dyn_stats_combiner.pl  echophase  envrc  envrc.bash  quick_compile  rebel_diff  spiff  tcc  tcc.readme  tccarm  unvrc  unvrc.bash
trimaran/simu/: Makefile
(+1040 files in other folders)
